from enum import Enum


class LogLevel(Enum):
    """
        - author:             Saurav Kumar Saha
        - created:            2021-02-06
        - changed:            2021-02-07

        This enum holds all available log levels.
    """

    ERROR = 1
    DEBUG = 2
    INFO = 3
